Comment out csrf_token

--- a/project/lunch_app/templates/lunch_app/detail.html
+++ b/project/lunch_app/templates/lunch_app/detail.html
@@ -14,7 +14,7 @@
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     
     <form action="{% url 'lunch_app:vote' lunch.id %}" method="post">
-    {% csrf_token %}
+    <!-- {% csrf_token %} -->
     {% for choice in lunch.choice_set.all %}
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
         <label for="choice{{ forloop.counter }}">{{ choice.choice }}</label><br>
